# cs-firewall-bouncer

./: .gitignore  .golangci.yml  LICENSE  Makefile  Pipfile  README.md  backend.go  chunk.go  chunk_test.go  config.go  flake.nix  go.mod  go.sum  helpers.go  iptables.go  iptables_context.go  iptables_stub.go  main.go  nftables.go  nftables_stub.go  pf.go  pf_context.go  pf_stub.go  pytest-debug.ini  pytest.ini  version.go
.github/: dependabot.yml  governance.yml  release.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: build-binary-package.yml  ci_golangci-lint.yml  codeql-analysis.yml  functional_tests.yaml  go.yml  governance-bot.yaml  lint.yml  release-drafter.yml  tests.yml  tests_deb.yml
cmd/: metrics.go  root.go
config/: crowdsec-firewall-bouncer.service  crowdsec-firewall-bouncer.yaml  cs-firewall-bouncer.service  cs-firewall-bouncer.yaml  firewall-bouncer.service  firewall-bouncer.yaml  helper.sh
debian/: .gitignore  changelog  control  crowdsec-firewall-bouncer-iptables.postinst  crowdsec-firewall-bouncer-iptables.postrm  crowdsec-firewall-bouncer-iptables.preinst  crowdsec-firewall-bouncer-iptables.prerm  crowdsec-firewall-bouncer-nftables.postinst  crowdsec-firewall-bouncer-nftables.postrm  crowdsec-firewall-bouncer-nftables.preinst  crowdsec-firewall-bouncer-nftables.prerm  crowdsec-firewall-bouncer.postinst  crowdsec-firewall-bouncer.postrm  crowdsec-firewall-bouncer.prerm  crowdsec-firewall-bouncer.service  postinst  rules
koneu/natend/: go.mod
mk/: goversion.mk
pkg/backend/: backend.go
pkg/cfg/: config.go  fileperms.go  logging.go
pkg/dryrun/: dryrun.go
pkg/ipsetcmd/: ipset.go
pkg/iptables/: iptables.go  iptables_context.go  iptables_stub.go  metrics.go
pkg/metrics/: metrics.go
pkg/nftables/: metrics.go  nftables.go  nftables_context.go  nftables_stub.go
pkg/pf/: chunk.go  chunk_test.go  metrics.go  metrics_test.go  pf.go  pf_context.go
pkg/profiling/: profiling.go  profiling_test.go
pkg/slicetools/: chunk.go  chunk_test.go
pkg/types/: types.go
pkg/version/: version.go
rpm/SOURCES/: 80-crowdsec-firewall-bouncer.preset
rpm/SPECS/: crowdsec-firewall-bouncer.spec
scripts/: _bouncer.sh  install.sh  uninstall.sh  upgrade.sh
test/: __init__.py  conftest.py  default.env  mock_lapi.py  pyproject.toml  pytest.ini  test_deb.py  test_deb_build.py  test_firewall_bouncer.py  test_rpm.py  test_scripts.py  test_scripts_no_crowdsec.py  test_scripts_nonroot.py  utils.py
test/backends/: utils.py
test/backends/iptables/: crowdsec-firewall-bouncer.yaml  test_iptables.py
test/backends/nftables/: crowdsec-firewall-bouncer.yaml  test_nftables.py
test/bouncer/: test_firewall_bouncer.py  test_iptables_deny_action.py  test_tls.py  test_yaml_local.py
test/install/no_crowdsec/: test_no_crowdsec_deb.py
test/install/with_crowdsec/: test_crowdsec_deb.py  test_crowdsec_scripts.py  test_scripts_no_crowdsec.py
test/iptables/: test_iptables.py
test/nftables/: crowdsec-firewall-bouncer.yaml  test_nftables.py
test/pkg/: test_build_deb.py  test_build_rpm.py  test_scripts_nonroot.py
test/tests/: conftest.py
test/tests/backends/: mock_lapi.py  utils.py
test/tests/backends/iptables/: crowdsec-firewall-bouncer-logging.yaml  test_iptables.py
test/tests/backends/nftables/: test_nftables.py
test/tests/bouncer/: test_firewall_bouncer.py  test_iptables_deny_action.py  test_tls.py  test_yaml_local.py
test/tests/install/no_crowdsec/: test_no_crowdsec_deb.py  test_no_crowdsec_scripts.py
test/tests/install/with_crowdsec/: test_crowdsec_deb.py  test_crowdsec_scripts.py
test/tests/pkg/: test_build_deb.py  test_build_rpm.py  test_scripts_nonroot.py
tests/: .gitignore  bats.mk  requirements.txt  utils.py
tests/bats/: 01-base.bats  run-tests
tests/bats/lib/: setup.sh  setup_file.sh
tests/iptables/: crowdsec-firewall-bouncer.yaml  test_iptables.py
tests/nftables/: bouncer_cfg.yaml  crowdsec-firewall-bouncer.yaml  mock_lapi.py  test_nftables.py
